--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,9 +12,12 @@ jobs:
     - name: Download ngrok
       run: |
         Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/site.bat -OutFile site.bat
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/wait.ps1 -OutFile wait.ps1
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/waitt.bat -OutFile waitt.bat
 
 
-    - name: SET SCREEN
+    - name: open site
       run: cmd /c site.bat
 
-
+    - name: open 10 site
+      run: cmd /c waitt.bat
