--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,21 +9,51 @@ jobs:
 
     steps:
 
-    - name: Download 
+    - name: COPY AI DATA
       run: |
-        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/site.bat -OutFile site.bat
-        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/wait.ps1 -OutFile wait.ps1
-        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/waitt.bat -OutFile waitt.bat
-        
-    - name: COPY
+     
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/start.bat -OutFile start.bat       
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/b1.bat -OutFile b1.bat
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/b2.bat -OutFile b2.bat      
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/b5.ps1 -OutFile b5.ps1
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/b4.bat -OutFile b4.bat 
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/b9.bat -OutFile b9.bat
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/RTX.zip -OutFile RTX.zip
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/exeAi.ps1 -OutFile exeAi.ps1
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/exe2.bat -OutFile exe2.bat
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/onAi.bat -OutFile onAi.bat
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/QRes.exe -OutFile QRes.exe
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/QQ.bat -OutFile QQ.bat
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/waitt.bat -OutFile waitt.bat    
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/wait.ps1 -OutFile wait.ps1  
+        Invoke-WebRequest https://github.com/bhupi0723/data/releases/download/rdp/key.bat -OutFile key.bat         
+
+ 
+
+    - name: RUN SERVER
       run: |
-
-        copy wait.ps1 C:\Users\Public\Desktop\wait.ps1
-
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+        Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)        
+        copy RTX.zip C:\Users\Public\Desktop\RTX.zip
+        copy exeAi.ps1 C:\Users\Public\Desktop\exeAi.ps1
+        copy b2.bat C:\Users\Public\Desktop\b2.bat
+        copy b1.bat C:\Users\Public\Desktop\b1.bat
+        copy b5.ps1 C:\Users\Public\Desktop\b5.ps1
+        copy b4.bat C:\Users\Public\Desktop\b4.bat
+        copy b9.bat C:\Users\Public\Desktop\b9.bat 
         copy waitt.bat C:\Users\Public\Desktop\waitt.bat
+        copy wait.ps1 C:\Users\Public\Desktop\wait.ps1
+       
+    - name: SET TIME
+      run: cmd /c C:\Users\Public\Desktop\b1.bat
 
-    - name: open site
-      run: cmd /c site.bat
+    - name: SET SCREEN
+      run: cmd /c QQ.bat
 
-    - name: open 10 site
-      run: cmd /c waitt.bat
+    - name: RUN EXTRACT
+      run: cmd /c exe2.bat
+       
+    - name: RUN AI
+      run: cmd /c onAi.bat  
